# CosyVoice

./: .gitignore  AUTODL_DEPLOYMENT_GUIDE.md  DEPENDENCY_ANALYSIS.md  INSTALL_UV.md  OFFLINE_INSTALL.md  README.md  autodl_deploy.sh  download_models.py  example.py  export_cosyvoice3_to_huggingface.py  fast_server.py  fast_server_cosyvoice3.py  fast_server_cosyvoice3_vllm.py  fast_server_opt_ttfb.py  install_uv.sh  myrequirements.txt  pyproject.toml  requirements.txt  requirements_all.txt  requirements_clean.txt  requirements_full.txt  requirements_heavy.txt  requirements_light.txt  server.py  test_fast_trtllm.py  test_streaming_mvp.py  webui.py  云GPU容器导入MPI模块卡死分析.md  首包延迟优化（非Docker容器）.md
.qoder/repowiki/zh/content/: 快速开始.md  故障排除.md  训练指南.md  贡献指南.md  项目概述.md
.qoder/repowiki/zh/content/API参考/: API参考.md  HTTP API.md  gRPC API.md
.qoder/repowiki/zh/content/安装与部署/: AutoDL部署.md  Docker部署.md  安装与部署.md  本地安装.md  模型下载.md
.qoder/repowiki/zh/content/性能优化/: TensorRT加速.md  Triton部署.md  vLLM集成.md  性能优化.md  模型量化.md  首包延迟优化.md
.qoder/repowiki/zh/content/核心功能/: 发音修补.md  核心功能.md  流式处理.md  语音克隆.md  跨语言语音合成.md  零样本语音合成.md
.qoder/repowiki/zh/content/模型架构/: Flow模块.md  HiFiGAN模块.md  LLM模块.md  前端处理模块.md  模型架构.md
.qoder/repowiki/zh/content/高级功能/: 扩展集成.md  自定义模型.md  部署优化.md  高级功能.md  高级工具使用.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
asset/speakers/: spk2info.pt
cosyvoice/flow/: flow.py
cosyvoice/vllm/: cosyvoice3.py
static/: index.html
