[project]
name = "cosyvoice"
version = "0.1.0"
description = "CosyVoice: Multi-lingual large voice generation model, providing inference, training and deployment full-stack ability."
readme = "README.md"
requires-python = "~=3.10.0"
# 注意:tensorrt 包在某些系统上可能安装失败,可以注释掉相关行
dependencies = [
    "conformer==0.3.2",
    "deepspeed==0.15.1; sys_platform == 'linux'",
    "diffusers==0.29.0",
    "fastapi==0.115.6",
    "fastapi-cli==0.0.4",
    "gdown==5.1.0",
    "gradio==5.4.0",
    "grpcio==1.57.0",
    "grpcio-tools==1.57.0",
    "hydra-core==1.3.2",
    "HyperPyYAML==1.2.2",
    "inflect==7.3.1",
    "librosa==0.10.2",
    "lightning==2.2.4",
    "matplotlib==3.7.5",
    "modelscope==1.20.0",
    "networkx==3.1",
    "omegaconf==2.3.0",
    "onnx==1.16.0",
    "onnxruntime-gpu==1.18.0; sys_platform == 'linux'",
    "onnxruntime==1.18.0; sys_platform == 'darwin' or sys_platform == 'win32'",
    # openai-whisper 最新版本 - 支持 triton 3.x 和 PyTorch 2.9
    "openai-whisper==20250625",
    "protobuf==4.25",
    "pyarrow==18.1.0",
    "pydantic==2.7.0",
    "pyworld==0.3.4",
    "rich==13.7.1",
    "soundfile==0.12.1",
    "tensorboard==2.14.0",
    # PyTorch 2.9.0 + CUDA 12.8 - RTX 50 系列必需！
    # ✅ 支持 sm_120 (NVIDIA Blackwell 架构 - RTX 50系列)
    # ✅ 支持 sm_50-sm_90 (从 Maxwell 到 Ada Lovelace)
    # ✅ CUDA 12.8 包含 RTX 50 系列的内核支持
    # ⚠️ 重要：RTX 5070 Ti 需要 cu128 或 cu130，cu126 不支持！
    # ✅ 包含 FlexAttention、Compiled Autograd 等最新特性
    "torch==2.9.0",
    "torchaudio==2.9.0",
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
    # torchcodec - torchaudio 2.9+ 的默认音频解码器
    "torchcodec==0.9.0",
    "transformers==4.51.3",
    "uvicorn==0.30.0",
    "wetext==0.0.4",
    "wget==3.2",
    # 更好的文本规范化包 - 本地 wheel 包
    "ttsfrd-dependency @ file:///${PROJECT_ROOT}/pretrained_models/CosyVoice-ttsfrd/ttsfrd_dependency-0.1-py3-none-any.whl",
    "ttsfrd @ file:///${PROJECT_ROOT}/pretrained_models/CosyVoice-ttsfrd/ttsfrd-0.4.2-cp310-cp310-linux_x86_64.whl ; sys_platform == 'linux' and python_version == '3.10'",
]

[project.optional-dependencies]
tensorrt = [
    # TensorRT 10.9.0.34 - 最新 Linux 稳定版（2025年11月）
    # ✅ 支持 CUDA 12.8/12.9 和 Blackwell 架构（RTX 50系列 sm_120）
    # ✅ 完整支持 Ada Lovelace（RTX 40系列 sm_89）
    # ✅ 根据 NVIDIA 官方文档，单一构建支持所有 CUDA 12.x 版本（https://docs.nvidia.com/deeplearning/tensorrt/latest/getting-started/support-matrix.html）
    # ⚠️ 注意：10.14.1.48 仅支持 Windows，Linux 请使用 10.9.0.34
    "tensorrt-cu12==10.9.0.34; sys_platform == 'linux'",
    "tensorrt-cu12-bindings==10.9.0.34; sys_platform == 'linux'",
    "tensorrt-cu12-libs==10.9.0.34; sys_platform == 'linux'",
]

[project.urls]
Homepage = "https://github.com/FunAudioLLM/CosyVoice"
Repository = "https://github.com/FunAudioLLM/CosyVoice"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# 指定只包含 cosyvoice 包
packages = ["cosyvoice"]

[tool.setuptools.package-data]
cosyvoice = ["**/*"]

[tool.uv]
# 不设置全局 index-url，让 uv 使用默认的 PyPI
# 不将项目本身作为可编辑包安装，只安装依赖
# dev-dependencies = []

[[tool.uv.index]]
name = "pytorch"
# CUDA 12.8: RTX 50 系列 (sm_120) 必需！
# ⚠️ 关键：只有 cu128/cu130 支持 Blackwell 架构
# - 支持 sm_120 (RTX 5090/5080/5070 Ti/5070)
# - 支持 sm_50-sm_90 (所有旧架构)
# - cu126 不支持 RTX 50，会报 "no kernel image" 错误
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "onnxruntime"
url = "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/"
explicit = true

[tool.uv.sources]
# 强制这些包从 PyTorch 源下载
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
